--- a/package.json
+++ b/package.json
@@ -23,6 +23,11 @@
     "urijs": "^1.19.0"
   },
   "devDependencies": {
-    "fastify": "^0.35.1"    
+    "fastify": "^0.35.1",
+    "webpack": "^4.27.1",
+    "webpack-cli": "^3.1.2"
+  },
+  "scripts": {
+    "build": "webpack --config webpack.config"
   }
 }
